[package]
name = "ar-bot"
version = "0.1.0"
authors = ["deciduously <github@deciduously.com>"]

[dependencies]

clap = "2"
error-chain = "0.12"
lazy_static = "1.0"
lettre = "0.8"
lettre_email = "0.8"
regex = "1"
serde = "1"
serde_derive = "1"
toml = "0.4"

[dev-dependencies]

pretty_assertions = "0.5"
rand = "0.5"