[package]
name = "ar-bot"
version = "0.1.0"
authors = ["deciduously <github@deciduously.com>"]

[dependencies]

askama = "0.7"
chrono = "0.4"
clap = "2"
# email-format = "0.6"
error-chain = "0.12"
lazy_static = "1.0"
log = "0.4"
pretty_env_logger = "0.2"
# lettre = "0.8"
# lettre_email = "0.8"
regex = "1"
serde = "1"
serde_derive = "1"
toml = "0.4"
uuid = { version = "0.6", features = ["v4"]}

[build-dependencies]

askama = "0.7"

[dev-dependencies]

pretty_assertions = "0.5"
rand = "0.5"